googleVis 0.5.3 [2014-06-14]
----------------------------

Bug Fix

* The order of y-variables in core charts wasn't maintained.
  Thanks to John Taveras for reporting this bug.

Changes

* Intervals for columns roles have to end with the suffix ".i",
  with i being an interger. Several interval columns are allowed,
  see the Roles demo and vignette for more details.


googleVis 0.5.2 [2014-05-05]
----------------------------
Changes

* Fixed minor formatting issues in documentation and vignettes.

* Added examples in demo googleVis to show how to
  customize points and lines and to the help files of
  gvisLineChart and gvisScatterChart.

googleVis 0.5.1 [2014-04-14]
----------------------------
NEW FEATURES

* New functions gvisSankey, gvisAnnotationChart, gvisHistogram,
  gvisCalendar and gvisTimeline to support the new Google charts 
  of the same names (without 'gvis').

* New demo Trendlines showing how trend-lines can be added to
  Scatter-, Bar-, Column-, and Line Charts.

* New demo Roles showing how different column roles can be used
  in core charts to highlight data.

* New vignettes written in R Markdown showcasing googleVis
  examples and how the package works with knitr.

Changes

* The help files of gvis charts no longer show all their options,
  instead a link to the online Google API documentation is given. 

* Updated googleVis demo

* All googleVis output will be displayed in your default browser. 
  In previous versions of googleVis output could also be displayed 
  in the preview pane of RStudio. This feature is no 
  longer available with the current version of RStudio, but is likely to   
  be introduced again with the release of RStudio version 0.99 or higher.


googleVis 0.4.7 [2013-11-10]
----------------------------

Changes

* New option 'googleVis.viewer' which controls the default output of
  the googleVis plot method. On package load it is set to 
  getOption("viewer"). It you use RStudio, then its viewer pane will 