@@ -80,6 +80,10 @@ and the Macromedia web site
 (\url{http://www.macromedia.com/support/documentation/en/flashplayer/help/})
 for more details.
 
+Important: To use this visualization, you must specify the height and width
+of the container element explicitly on your page. So, for example:
+options=list(width="600px", height="350px")
+
 Use code{\link{gvisAnnotationChart}} for a non-Flash version of this plot.
 }
 \examples{
@@ -95,7 +99,7 @@ A1 <- gvisAnnotatedTimeLine(Stock, datevar="Date",
                            titlevar="Title", annotationvar="Annotation",
                            options=list(displayAnnotations=TRUE,
                             legendPosition='newRow',
-                            width=600, height=350)
+                            width="600px", height="350px")
                            )
 plot(A1)
 
@@ -104,7 +108,7 @@ A2 <- gvisAnnotatedTimeLine(Stock, datevar="Date",
                            numvar="Value", idvar="Device",
                            titlevar="Title", annotationvar="Annotation",
                            options=list(displayAnnotations=TRUE,
-                            width=600, height=350, scaleColumns='[0,1]',
+                            width="600px", height="350px", scaleColumns='[0,1]',
                             scaleType='allmaximized')
                           )
 plot(A2)
@@ -114,7 +118,7 @@ A3 <- gvisAnnotatedTimeLine(Stock, datevar="Date",
                            numvar="Value", idvar="Device",
                            titlevar="Title", annotationvar="Annotation",
                            options=list(
-                             width=600, height=350,
+                             width="600px", height="350px",
                             zoomStartTime=as.Date("2008-01-04"),
                             zoomEndTime=as.Date("2008-01-05"))
                           )
@@ -127,7 +131,7 @@ A4 <- gvisAnnotatedTimeLine(Stock, datevar="Date",
                            numvar="Value", idvar="Device",
                            titlevar="Title", annotationvar="Annotation",
                            options=list(
-                             width=600, height=350,
+                             width="600px", height="350px",
                              fill=10, displayExactValues=TRUE,
                              colors="['#0000ff','#00ff00']")
                            )
@@ -138,7 +142,8 @@ plot(A4)
 ## Data with POSIXct datetime variable
 A5 <- gvisAnnotatedTimeLine(Andrew, datevar="Date/Time UTC",
                             numvar="Pressure_mb",
-                            options=list(scaleType='maximized')
+                            options=list(scaleType='maximized',
+                                         width="600px", height="350px")
                             )
 
 plot(A5)
@@ -187,7 +192,7 @@ aapl <- gvisAnnotatedTimeLine(AAPL, datevar="Date",
                             zoomStartTime=lyd,
                             zoomEndTime=as.Date(d),
                             legendPosition='newRow',
-                            width=600, height=400, scaleColumns='[0,1]',
+                            width="600px", height="400px", scaleColumns='[0,1]',
                             scaleType='allmaximized')
                            )
 
